--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "eventemitter3": "^3.1.2",
     "fontfaceobserver": "^2.1.0",
+    "gsap": "^3.6.1",
     "pixi.js": "~5.3.3",
     "sparkles": "^1.0.1"
   },
