--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run clean && parcel src/index.html",
     "build": "npm run clean && parcel build src/index.html --public-url ./",
     "build_serve": "npm run build && http-server ./dist",
-    "clean": "rimraf ./dist ./.cache"
+    "clean": "rimraf ./dist ./.cache",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Llorenç Pujol Ferriol",
   "license": "MIT",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/jest": "~26.0.15",
     "babel-preset-es2015": "~6.24.1",
+    "gh-pages": "^3.1.0",
     "http-server": "~0.12.3",
     "jest": "~26.6.3",
     "parcel-bundler": "~1.12.4",
